Optional reload before checking disk consolidation
- Move disk consolidation needed state filtering logic to
  `vsphere.FilterVMsByDiskConsolidationState()`

- Add `vsphere.TriggerEntityStateReload()` function to reload
  the current state for provided ManagedEntity values
  - We use this to ensure that the `vm.Runtime.ConsolidationNeeded`
    field has the most current data for evaluation

- Add `--trigger-reload` flag to allow optional state
  reload/refresh before evaluating disk consolidation status

- Documentation updates to reflect new optional state reload
  support

- Update contrib command definition file for plugin to
  illustrate use of new flag, document benefits (fresh state
  data) and shortcomings (plugin runtime increase) of using
  the new flag

refs GH-278
refs GH-293

--- a/contrib/nagios/etc/nagios-plugins/config/vmware-disk-consolidation.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-disk-consolidation.cfg
@@ -6,27 +6,54 @@
 # full license information.
 
 
-# Look at specific pools, exclude other pools
+# Look at specific pools, exclude other pools. Use existing (potentially
+# stale) state data for evaluation of disk consolidation status instead of
+# triggering (potentially expensive) reload/refresh of state data.
 define command{
     command_name    check_vmware_disk_consolidation_include_pools
     command_line    /usr/lib/nagios/plugins/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --trust-cert --log-level info
     }
 
-# Look at specific pools, exclude other pools, exclude list of VMs
+# Look at specific pools, exclude other pools, exclude list of VMs. Use
+# existing (potentially stale) state data for evaluation of disk consolidation
+# status instead of triggering (potentially expensive) reload/refresh of state
+# data.
 define command{
     command_name    check_vmware_disk_consolidation_include_pools_exclude_vms
     command_line    /usr/lib/nagios/plugins/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --include-rp '$ARG4$' --ignore-vm '$ARG5$' --trust-cert --log-level info
     }
 
-# Look at all pools, all VMs. This variation of the command is most useful for
-# environments where all VMs are monitored equally.
+# Look at all pools, all VMs.  Use existing (potentially stale) state data for
+# evaluation of disk consolidation status instead of triggering (potentially
+# expensive) reload/refresh of state data.
+#
+# This variation of the command is most useful for environments where all VMs
+# are monitored equally and no filtering based on pool membership or VM name
+# is needed.
 define command{
     command_name    check_vmware_disk_consolidation
     command_line    /usr/lib/nagios/plugins/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --trust-cert --log-level info
     }
 
-# Look at all pools, exclude list of VMs
+# Look at all pools, exclude list of VMs.  Use existing (potentially stale)
+# state data for evaluation of disk consolidation status instead of triggering
+# (potentially expensive) reload/refresh of state data.
 define command{
     command_name    check_vmware_disk_consolidation_exclude_vms
     command_line    /usr/lib/nagios/plugins/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --ignore-vm '$ARG4$' --trust-cert --log-level info
+    }
+
+# Look at all pools, all VMs, trigger potentially expensive reload operation
+# on each evaluated VM.
+#
+# This variation of the command is most useful for environments where all VMs
+# are monitored equally and where the time required to reload/refresh data
+# data for each VM is acceptable.
+#
+# The tradeoff in having current state data comes at the cost of increased
+# execution time. If this proves too expensive for your environment, you may
+# wish to schedule a job on the cluster to handle refreshing state data.
+define command{
+    command_name    check_vmware_disk_consolidation_trigger_reload
+    command_line    /usr/lib/nagios/plugins/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --trust-cert --log-level info --trigger-reload --timeout 110
     }
