Replace fully-qualified path for plugins
Use the `$USER1$` macro already defined by the `resources.cfg`
file which allows for distro-agnostic path references.

This makes the contrib files more usable as-is for RHEL-based
distros or custom builds which store their plugins in
different locations than Debian-based distros.

refs GH-517

--- a/contrib/nagios/etc/nagios-plugins/config/vmware-disk-consolidation.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-disk-consolidation.cfg
@@ -11,7 +11,7 @@
 # triggering (potentially expensive) reload/refresh of state data.
 define command{
     command_name    check_vmware_disk_consolidation_include_pools
-    command_line    /usr/lib/nagios/plugins/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --trust-cert --log-level info
     }
 
 # Look at specific pools, exclude other pools, exclude list of VMs. Use
@@ -20,7 +20,7 @@ define command{
 # data.
 define command{
     command_name    check_vmware_disk_consolidation_include_pools_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --include-rp '$ARG4$' --ignore-vm '$ARG5$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --include-rp '$ARG4$' --ignore-vm '$ARG5$' --trust-cert --log-level info
     }
 
 # Look at all pools, all VMs.  Use existing (potentially stale) state data for
@@ -32,7 +32,7 @@ define command{
 # is needed.
 define command{
     command_name    check_vmware_disk_consolidation
-    command_line    /usr/lib/nagios/plugins/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --trust-cert --log-level info
     }
 
 # Look at all pools, exclude list of VMs.  Use existing (potentially stale)
@@ -40,7 +40,7 @@ define command{
 # (potentially expensive) reload/refresh of state data.
 define command{
     command_name    check_vmware_disk_consolidation_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --ignore-vm '$ARG4$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --ignore-vm '$ARG4$' --trust-cert --log-level info
     }
 
 # Look at all pools, all VMs, trigger potentially expensive reload operation
@@ -55,5 +55,5 @@ define command{
 # wish to schedule a job on the cluster to handle refreshing state data.
 define command{
     command_name    check_vmware_disk_consolidation_trigger_reload
-    command_line    /usr/lib/nagios/plugins/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --trust-cert --log-level info --trigger-reload --timeout 110
+    command_line    $USER1$/check_vmware_disk_consolidation --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --trust-cert --log-level info --trigger-reload --timeout 110
     }
