--- a/contrib/nagios/etc/nagios-plugins/config/vmware-host-datastore-vms-pairings.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-host-datastore-vms-pairings.cfg
@@ -11,7 +11,7 @@
 # Attribute prefix separator for hosts and datastores.
 define command{
     command_name   check_vmware_hs2ds2vms_include_pools
-    command_line   /usr/lib/nagios/plugins/check_vmware_hs2ds2vms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --ca-name '$ARG5$' --ca-prefix-sep '$ARG6$' --trust-cert --log-level info
+    command_line   $USER1$/check_vmware_hs2ds2vms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --ca-name '$ARG5$' --ca-prefix-sep '$ARG6$' --trust-cert --log-level info
     }
 
 # Look at specific pools only, exclude list of VMs, do not evaluate any VMs
@@ -20,7 +20,7 @@ define command{
 # datastores.
 define command{
     command_name   check_vmware_hs2ds2vms_include_pools_exclude_vms
-    command_line   /usr/lib/nagios/plugins/check_vmware_hs2ds2vms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --include-rp '$ARG4$' --ignore-vm '$ARG5$' --ca-name '$ARG6$' --ca-prefix-sep '$ARG7$' --trust-cert --log-level info
+    command_line   $USER1$/check_vmware_hs2ds2vms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --include-rp '$ARG4$' --ignore-vm '$ARG5$' --ca-name '$ARG6$' --ca-prefix-sep '$ARG7$' --trust-cert --log-level info
     }
 
 # Look at all pools, all VMs, do not evaluate any VMs that are powered off.
@@ -31,7 +31,7 @@ define command{
 # are monitored equally.
 define command{
     command_name   check_vmware_hs2ds2vms
-    command_line   /usr/lib/nagios/plugins/check_vmware_hs2ds2vms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --ca-name '$ARG4$' --ca-prefix-sep '$ARG5$' --trust-cert --log-level info
+    command_line   $USER1$/check_vmware_hs2ds2vms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --ca-name '$ARG4$' --ca-prefix-sep '$ARG5$' --trust-cert --log-level info
     }
 
 # Look at all pools, exclude list of VMs, do not evaluate any VMs that are
@@ -39,5 +39,5 @@ define command{
 # same Custom Attribute prefix separator for hosts and datastores.
 define command{
     command_name   check_vmware_hs2ds2vms_exclude_vms
-    command_line   /usr/lib/nagios/plugins/check_vmware_hs2ds2vms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --ignore-vm '$ARG4$' --ca-name '$ARG5$' --ca-prefix-sep '$ARG6$' --trust-cert --log-level info
+    command_line   $USER1$/check_vmware_hs2ds2vms --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --ignore-vm '$ARG4$' --ca-name '$ARG5$' --ca-prefix-sep '$ARG6$' --trust-cert --log-level info
     }
