--- a/contrib/nagios/etc/nagios-plugins/config/vmware-host-memory.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-host-memory.cfg
@@ -10,5 +10,5 @@
 # threshold values.
 define command{
     command_name    check_vmware_host_memory
-    command_line    /usr/lib/nagios/plugins/check_vmware_host_memory --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --memory-usage-warning '$ARG4$' --memory-usage-critical '$ARG5$' --host-name '$ARG6$' --trust-cert  --log-level info
+    command_line    $USER1$/check_vmware_host_memory --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --memory-usage-warning '$ARG4$' --memory-usage-critical '$ARG5$' --host-name '$ARG6$' --trust-cert  --log-level info
     }
