--- a/contrib/nagios/etc/nagios-plugins/config/vmware-interactive-question.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-interactive-question.cfg
@@ -9,24 +9,24 @@
 # Look at specific pools, exclude other pools
 define command{
     command_name    check_vmware_question_include_pools
-    command_line    /usr/lib/nagios/plugins/check_vmware_question --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_question --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --trust-cert --log-level info
     }
 
 # Look at specific pools, exclude other pools, exclude list of VMs
 define command{
     command_name    check_vmware_question_include_pools_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_question --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --include-rp '$ARG4$' --ignore-vm '$ARG5$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_question --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --include-rp '$ARG4$' --ignore-vm '$ARG5$' --trust-cert --log-level info
     }
 
 # Look at all pools, all VMs. This variation of the command is most useful for
 # environments where all VMs are monitored equally.
 define command{
     command_name    check_vmware_question
-    command_line    /usr/lib/nagios/plugins/check_vmware_question --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_question --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --trust-cert --log-level info
     }
 
 # Look at all pools, exclude list of VMs
 define command{
     command_name    check_vmware_question_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_question --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --ignore-vm '$ARG4$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_question --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --ignore-vm '$ARG4$' --trust-cert --log-level info
     }
