--- a/contrib/nagios/etc/nagios-plugins/config/vmware-resource-pools.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-resource-pools.cfg
@@ -8,11 +8,11 @@
 
 define command{
     command_name    check_vmware_resource_pools_exclude_pools
-    command_line    /usr/lib/nagios/plugins/check_vmware_rps_memory --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --memory-use-warning '$ARG4$' --memory-use-critical '$ARG5$' --memory-max-allowed '$ARG6$' --exclude-rp '$ARG7$' --trust-cert  --log-level info
+    command_line    $USER1$/check_vmware_rps_memory --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --memory-use-warning '$ARG4$' --memory-use-critical '$ARG5$' --memory-max-allowed '$ARG6$' --exclude-rp '$ARG7$' --trust-cert  --log-level info
     }
 
 # This variation of the command does not allow exclusions
 define command{
     command_name    check_vmware_resource_pools_include_pools
-    command_line    /usr/lib/nagios/plugins/check_vmware_rps_memory --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --memory-use-warning '$ARG4$' --memory-use-critical '$ARG5$' --memory-max-allowed '$ARG6$' --include-rp '$ARG7$' --trust-cert  --log-level info
+    command_line    $USER1$/check_vmware_rps_memory --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --memory-use-warning '$ARG4$' --memory-use-critical '$ARG5$' --memory-max-allowed '$ARG6$' --include-rp '$ARG7$' --trust-cert  --log-level info
     }
