--- a/contrib/nagios/etc/nagios-plugins/config/vmware-tools.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-tools.cfg
@@ -9,14 +9,14 @@
 # Look at specific pools only, do not evaluate any VMs that are powered off.
 define command{
     command_name    check_vmware_tools_include_pools
-    command_line    /usr/lib/nagios/plugins/check_vmware_tools --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --trust-cert  --log-level info
+    command_line    $USER1$/check_vmware_tools --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --trust-cert  --log-level info
     }
 
 # Look at specific pools only, exclude list of VMs, do not evaluate any VMs
 # that are powered off.
 define command{
     command_name    check_vmware_tools_include_pools_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_tools --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --ignore-vm '$ARG5$' --trust-cert  --log-level info
+    command_line    $USER1$/check_vmware_tools --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --ignore-vm '$ARG5$' --trust-cert  --log-level info
     }
 
 # Look at all pools, all VMs, do not evaluate any VMs that are powered off.
@@ -24,12 +24,12 @@ define command{
 # are monitored equally.
 define command{
     command_name    check_vmware_tools
-    command_line    /usr/lib/nagios/plugins/check_vmware_tools --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --trust-cert  --log-level info
+    command_line    $USER1$/check_vmware_tools --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$'  --trust-cert  --log-level info
     }
 
 # Look at all pools, exclude list of VMs, do not evaluate any VMs that are
 # powered off.
 define command{
     command_name    check_vmware_tools_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_tools --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --ignore-vm '$ARG4$' --trust-cert  --log-level info
+    command_line    $USER1$/check_vmware_tools --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --ignore-vm '$ARG4$' --trust-cert  --log-level info
     }
