--- a/contrib/nagios/etc/nagios-plugins/config/vmware-snapshots-age.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-snapshots-age.cfg
@@ -9,13 +9,13 @@
 # Look at specific pools, exclude other pools
 define command{
     command_name    check_vmware_snapshots_age_include_pools
-    command_line    /usr/lib/nagios/plugins/check_vmware_snapshots_age --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --age-warning '$ARG4$' --age-critical '$ARG5$' --include-rp '$ARG6$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_snapshots_age --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --age-warning '$ARG4$' --age-critical '$ARG5$' --include-rp '$ARG6$' --trust-cert --log-level info
     }
 
 # Look at specific pools, exclude other pools, exclude list of VMs
 define command{
     command_name    check_vmware_snapshots_age_include_pools_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_snapshots_age --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --age-warning '$ARG4$' --age-critical '$ARG5$' --include-rp '$ARG6$' --ignore-vm '$ARG7$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_snapshots_age --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --age-warning '$ARG4$' --age-critical '$ARG5$' --include-rp '$ARG6$' --ignore-vm '$ARG7$' --trust-cert --log-level info
     }
 
 # Look at all pools, all VMs, do not evaluate any VMs that are powered off.
@@ -23,11 +23,11 @@ define command{
 # are monitored equally.
 define command{
     command_name    check_vmware_snapshots_age
-    command_line    /usr/lib/nagios/plugins/check_vmware_snapshots_age --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --age-warning '$ARG4$' --age-critical '$ARG5$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_snapshots_age --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --age-warning '$ARG4$' --age-critical '$ARG5$' --trust-cert --log-level info
     }
 
 # Look at all pools, exclude list of VMs
 define command{
     command_name    check_vmware_snapshots_age_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_snapshots_age --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --age-warning '$ARG4$' --age-critical '$ARG5$' --ignore-vm '$ARG6$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_snapshots_age --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --age-warning '$ARG4$' --age-critical '$ARG5$' --ignore-vm '$ARG6$' --trust-cert --log-level info
     }
