--- a/contrib/nagios/etc/nagios-plugins/config/vmware-vcpus.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-vcpus.cfg
@@ -9,14 +9,14 @@
 # Look at specific pools only, do not evaluate any VMs that are powered off.
 define command{
     command_name    check_vmware_vcpus_include_pools
-    command_line    /usr/lib/nagios/plugins/check_vmware_vcpus --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --vcpus-warning '$ARG4$' --vcpus-critical '$ARG5$' --vcpus-max-allowed '$ARG6$' --include-rp '$ARG7$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vcpus --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --vcpus-warning '$ARG4$' --vcpus-critical '$ARG5$' --vcpus-max-allowed '$ARG6$' --include-rp '$ARG7$' --trust-cert --log-level info
     }
 
 # Look at specific pools only, exclude list of VMs, do not evaluate any VMs
 # that are powered off.
 define command{
     command_name    check_vmware_vcpus_include_pools_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_vcpus --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --vcpus-warning '$ARG4$' --vcpus-critical '$ARG5$' --vcpus-max-allowed '$ARG6$' --include-rp '$ARG7$' --ignore-vm '$ARG8$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vcpus --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --vcpus-warning '$ARG4$' --vcpus-critical '$ARG5$' --vcpus-max-allowed '$ARG6$' --include-rp '$ARG7$' --ignore-vm '$ARG8$' --trust-cert --log-level info
     }
 
 # Look at all pools, all VMs, do not evaluate any VMs that are powered off.
@@ -24,12 +24,12 @@ define command{
 # are monitored equally.
 define command{
     command_name    check_vmware_vcpus
-    command_line    /usr/lib/nagios/plugins/check_vmware_vcpus --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --vcpus-warning '$ARG4$' --vcpus-critical '$ARG5$' --vcpus-max-allowed '$ARG6$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vcpus --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --vcpus-warning '$ARG4$' --vcpus-critical '$ARG5$' --vcpus-max-allowed '$ARG6$' --trust-cert --log-level info
     }
 
 # Look at all pools, exclude list of VMs, do not evaluate any VMs that are
 # powered off.
 define command{
     command_name    check_vmware_vcpus_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_vcpus --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --vcpus-warning '$ARG4$' --vcpus-critical '$ARG5$' --vcpus-max-allowed '$ARG6$' --ignore-vm '$ARG7$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vcpus --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --vcpus-warning '$ARG4$' --vcpus-critical '$ARG5$' --vcpus-max-allowed '$ARG6$' --ignore-vm '$ARG7$' --trust-cert --log-level info
     }
