--- a/contrib/nagios/etc/nagios-plugins/config/vmware-virtual-hardware.cfg
+++ b/contrib/nagios/etc/nagios-plugins/config/vmware-virtual-hardware.cfg
@@ -13,14 +13,14 @@
 # Look at specific pools only, do not evaluate any VMs that are powered off.
 define command{
     command_name    check_vmware_vhw_homogeneous_include_pools
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --trust-cert --log-level info
     }
 
 # Look at specific pools only, exclude list of VMs, do not evaluate any VMs
 # that are powered off.
 define command{
     command_name    check_vmware_vhw_homogeneous_include_pools_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --ignore-vm '$ARG5$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --include-rp '$ARG4$' --ignore-vm '$ARG5$' --trust-cert --log-level info
     }
 
 # Look at all pools, all VMs, do not evaluate any VMs that are powered off.
@@ -28,14 +28,14 @@ define command{
 # are monitored equally.
 define command{
     command_name    check_vmware_vhw_homogeneous
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --trust-cert --log-level info
     }
 
 # Look at all pools, exclude list of VMs, do not evaluate any VMs that are
 # powered off.
 define command{
     command_name    check_vmware_vhw_homogeneous_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --ignore-vm '$ARG4$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --ignore-vm '$ARG4$' --trust-cert --log-level info
     }
 
 
@@ -48,14 +48,14 @@ define command{
 # Look at specific pools only, do not evaluate any VMs that are powered off.
 define command{
     command_name    check_vmware_vhw_thresholds_include_pools
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --outdated-by-warning '$ARG4$' --outdated-by-critical '$ARG5$' --include-rp '$ARG6$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --outdated-by-warning '$ARG4$' --outdated-by-critical '$ARG5$' --include-rp '$ARG6$' --trust-cert --log-level info
     }
 
 # Look at specific pools only, exclude list of VMs, do not evaluate any VMs
 # that are powered off.
 define command{
     command_name    check_vmware_vhw_thresholds_include_pools_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --outdated-by-warning '$ARG4$' --outdated-by-critical '$ARG5$' --include-rp '$ARG6$' --ignore-vm '$ARG7$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --outdated-by-warning '$ARG4$' --outdated-by-critical '$ARG5$' --include-rp '$ARG6$' --ignore-vm '$ARG7$' --trust-cert --log-level info
     }
 
 # Look at all pools, all VMs, do not evaluate any VMs that are powered off.
@@ -63,14 +63,14 @@ define command{
 # are monitored equally.
 define command{
     command_name    check_vmware_vhw_thresholds
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --outdated-by-warning '$ARG4$' --outdated-by-critical '$ARG5$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --outdated-by-warning '$ARG4$' --outdated-by-critical '$ARG5$' --trust-cert --log-level info
     }
 
 # Look at all pools, exclude list of VMs, do not evaluate any VMs that are
 # powered off.
 define command{
     command_name    check_vmware_vhw_thresholds_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --outdated-by-warning '$ARG4$' --outdated-by-critical '$ARG5$' --ignore-vm '$ARG6$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --outdated-by-warning '$ARG4$' --outdated-by-critical '$ARG5$' --ignore-vm '$ARG6$' --trust-cert --log-level info
     }
 
 
@@ -83,14 +83,14 @@ define command{
 # Look at specific pools only, do not evaluate any VMs that are powered off.
 define command{
     command_name    check_vmware_vhw_minreq_include_pools
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --minimum-version '$ARG4$' --include-rp '$ARG5$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --minimum-version '$ARG4$' --include-rp '$ARG5$' --trust-cert --log-level info
     }
 
 # Look at specific pools only, exclude list of VMs, do not evaluate any VMs
 # that are powered off.
 define command{
     command_name    check_vmware_vhw_minreq_include_pools_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --minimum-version '$ARG4$' --include-rp '$ARG5$' --ignore-vm '$ARG6$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --minimum-version '$ARG4$' --include-rp '$ARG5$' --ignore-vm '$ARG6$' --trust-cert --log-level info
     }
 
 # Look at all pools, all VMs, do not evaluate any VMs that are powered off.
@@ -98,14 +98,14 @@ define command{
 # are monitored equally.
 define command{
     command_name    check_vmware_vhw_minreq
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --minimum-version '$ARG4$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --minimum-version '$ARG4$' --trust-cert --log-level info
     }
 
 # Look at all pools, exclude list of VMs, do not evaluate any VMs that are
 # powered off.
 define command{
     command_name    check_vmware_vhw_minreq_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --minimum-version '$ARG4$' --ignore-vm '$ARG5$' --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --minimum-version '$ARG4$' --ignore-vm '$ARG5$' --trust-cert --log-level info
     }
 
 
@@ -118,14 +118,14 @@ define command{
 # Look at specific pools only, do not evaluate any VMs that are powered off.
 define command{
     command_name    check_vmware_vhw_defreq_include_pools
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --cluster-name '$ARG4$' --include-rp '$ARG5$' --default-is-min-version --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --cluster-name '$ARG4$' --include-rp '$ARG5$' --default-is-min-version --trust-cert --log-level info
     }
 
 # Look at specific pools only, exclude list of VMs, do not evaluate any VMs
 # that are powered off.
 define command{
     command_name    check_vmware_vhw_defreq_include_pools_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --cluster-name '$ARG4$' --include-rp '$ARG5$' --ignore-vm '$ARG6$' --default-is-min-version --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --cluster-name '$ARG4$' --include-rp '$ARG5$' --ignore-vm '$ARG6$' --default-is-min-version --trust-cert --log-level info
     }
 
 # Look at all pools, all VMs, do not evaluate any VMs that are powered off.
@@ -133,12 +133,12 @@ define command{
 # are monitored equally.
 define command{
     command_name    check_vmware_vhw_defreq
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --cluster-name '$ARG4$' --default-is-min-version --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --cluster-name '$ARG4$' --default-is-min-version --trust-cert --log-level info
     }
 
 # Look at all pools, exclude list of VMs, do not evaluate any VMs that are
 # powered off.
 define command{
     command_name    check_vmware_vhw_defreq_exclude_vms
-    command_line    /usr/lib/nagios/plugins/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --cluster-name '$ARG4$' --ignore-vm '$ARG5$' --default-is-min-version --trust-cert --log-level info
+    command_line    $USER1$/check_vmware_vhw --server '$HOSTNAME$' --domain '$ARG1$' --username '$ARG2$' --password '$ARG3$' --cluster-name '$ARG4$' --ignore-vm '$ARG5$' --default-is-min-version --trust-cert --log-level info
     }
